# resumegpt

./: .env  .gitignore  README.md  __init__.py  check_null_bytes.py  config.py  pyproject.toml  requirements.txt  setup.py  test_resume.json
ResumeGPT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chrome-extension/: contentScript.js  manifest.json  popup.css  popup.html  popup.js
data/: sample_resume.yaml
data/job_submission_20250116_142813/: job.yaml
data/job_submission_20250116_143344/: job.yaml
data/job_submission_20250116_143513/: job.yaml
path/to/chrome-extension/: manifest.json  popup.html  popup.js
resumegpt/: __init__.py.bak  app.py
resumegpt/config/: __init__.py  config.py
resumegpt/models/: __init__.py  job_post.py  resume.py
resumegpt/pdf_generation/: __init__.py
resumegpt/prompts/: __init__.py
resumegpt/services/: __init__.py  api_handler.py  pdf_generation.py  resume_improver.py  resume_scorer.py
resumegpt/utils/: __init__.py  model_cache.py  resume_parser.py  yaml_handler.py
tests/: test_services.py
